added my travel blog

--- a/index.html
+++ b/index.html
@@ -6,28 +6,37 @@
     <link rel="stylesheet" href="style/travelblog.css">
 </head>
 <body>
-    <div>
+    <div>   
         <h1>My Travel blog</h1>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
     </div>
     <br>
     <div>
-        <h1>My Travel blog</h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
+        <h1>My Room</h1>
+        I'd like to tell you about my room.
+        <br>
+        I have my own room.I don't share it whit my sister. My room is between my sister's room and parent's room.
+        <br>
+        In one corner of my room, there is a bed. My desk is to the right of the bed.There is a poster of my favorite TV star on the wall. I also have a closet for my clothes.
+        <br>
+        My room is a bit small, but I like it.
     </div>
     <br> 
     <div>
-        <h1>My Travel blog</h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
+        <h1>My Family</h1>
+        Let me tell you about my Family.
+        <br>
+        There are four people in my family.I have a father,a mother and an older brother.I am the youngest child in my family.
+        <br>
+        My father is a salesman and my mother is a home maker.My brother is a middle school student.He is two years older than I am.On the weekend,my family often eats out at a restaurant.
+        <br>
+        I am very close to my family.I love them all.
     </div>
     <br>
     <div>
-        <h1>My Travel blog</h1>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque natus saepe, animi nemo quod cum unde atque autem, mollitia error, maiores voluptate alias optio a! Distinctio illo eos necessitatibus velit.
+        <h1>My Favorite Sport</h1>
+        I like many sports, but I like basketball the most.I play basketball whit my friends every sunday morning.we play it on the basketball court at my school. I am good at dribbling and shooting the ball.After school, I practice with my own basketball.I also enjoy watching basketball games on TV. My Favorite basketball team is the Los Angeles Lakers.I love everything about basketball! 
     </div>
 
 </body>
