added my new blog

--- a/index.html
+++ b/index.html
@@ -36,7 +36,23 @@
     <br>
     <div>
         <h1>My Favorite Sport</h1>
-        I like many sports, but I like basketball the most.I play basketball whit my friends every sunday morning.we play it on the basketball court at my school. I am good at dribbling and shooting the ball.After school, I practice with my own basketball.I also enjoy watching basketball games on TV. My Favorite basketball team is the Los Angeles Lakers.I love everything about basketball! 
+        I like many sports, but I like basketball the most.
+        <br>
+        I play basketball whit my friends every sunday morning.we play it on the basketball court at my school. I am good at dribbling and shooting the ball.After school, I practice with my own basketball.
+        <br>
+        I also enjoy watching basketball games on TV. My Favorite basketball team is the Los Angeles Lakers.I love everything about basketball! 
+    </div>
+    <br>
+    <div>
+        <h1>My School</h1>
+        I'd like to tell about my school.
+        <br>
+        I go to wile Lake Elementary school in chicago.My school is not far from my house.I usually walk to school.
+        <br>
+        My school has four floors.My classroom is on the second floor.There is a computer lab.alibray and a schoolyard.I like to play soccre there.
+        <br>
+        I really like my school!
+
     </div>
 
 </body>
